<resources>
    <string name="app_name">MyStore</string>
    <string name="value_00_00">00,00</string>
    <string name="save">Salvar</string>
    <string name="estoque">Estoque</string>
    <string name="adcionar">Adcionar</string>
    <string name="valor">Valor</string>
    <string name="buscar_produto">Buscar Produto</string>
    <string name="zero_value">0</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor">Valor</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="descri_o_do_produto">Descrição do produto</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="de">DE</string>
    <string name="ate">ATE</string>
    <string name="filtrar">Filtrar</string>
    <string name="vendas">VENDAS</string>
    <string name="compras">COMPRAS</string>
    <string name="total">TOTAL</string>
    <string name="comprar">Comprar</string>
    <string name="vender">Vender</string>
    <string name="add_produto">Add Produto</string>
</resources>